# Eqratech_Hussein_Hiyassat_Project

./: .coverage  .cursorrules  .gitattributes  .gitignore  ACADEMIC_PUBLICATION_STANDARDS.md  ACADEMIC_PUBLICATION_STANDARDS_V2.md  AGT_COMPLETE_SUMMARY.md  AGT_Complete_Documentation.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CODE_ANALYSIS.md  COLAB_INTEGRATION.md  COLAB_USAGE_GUIDE.md  COMPILATION_REPORT.md  CONTRIBUTING.md  COVERAGE_PROGRESS_REPORT.md  COVERAGE_ROADMAP_90.md  CTE_GATE_DOMAINS_GUIDE.md  CTE_GATE_GUIDE.md  DATASET_EXPANSION_PLAN.md  DL0_Proof_of_Concept.md  ENGINE_TAXONOMY.md  ENHANCED_REPORTING_GUIDE.md  ENHANCED_ROADMAP.md  Eqratech_Arabic_Colab.ipynb  FRACTALHUB_README.md  FUTURE_PLAN.md  HIERARCHY_README.md  Harakat.csv  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  ISNADI_README.md  LICENSE  MANIFEST.in  Main_engine.py  Makefile  NEXT_PHASE_IMPLEMENTATION.md  (+179 more)
.github/: COPILOT_UPDATE_DIFF.md  COPILOT_UPDATE_EVIDENCE.md  COPILOT_UPDATE_SUMMARY_AR.md  MERGE_AUDIT_LOG_2026-02-27.md  UPSTREAM_SYNC_PLAN_2026-02-27.md  UPSTREAM_SYNC_RELEASE_NOTES_2026-02-27.md  copilot-instructions.md  copilot-instructions.md.backup
app/: README.md
arabic-formal-verification/: README.md
arabic_xai_core/: __init__.py  __main__.py  composite_expander.py  grapheme_parser.py  lexicon_builtins.py  main.py  models.py  morph_gate.py  normalizer.py  phonology_map.py  prover.py  sline_core.py  syllable_engine.py  weight_engine.py
configs/: transformer_quran_colab.yaml
coq/: .Makefile.d  .lia.cache  AGT_Complete.v  AGT_Compositional.v  AGT_Core.v  AGT_DerivationalCatalog.v  AGT_Discourse.v  AGT_Extended.v  AGT_LexicalModels.v  AGT_Mathematical.v  AGT_Semantics.v  ArabicOntology.v  Makefile  Makefile.conf  PHASE3_COMPLETION.md  PROOF_STRATEGY.md  README.md  README_WINDOWS_AR.md  ROADMAP.md  UsulLughah.v  _CoqProject  check_assumptions.py  check_coq_tactics.py  generate_tcb_manifest.py
coq/extraction/: README.md  dune  dune-project  runtime_bridge.ml  test_extraction.ml
coq_proofs/: Assumptions.v  Canonical.v  CoreTypes.v  Energy.v  FINAL_REPORT.md  Generator.v  Makefile  Maqam.v  Minimizer.v  README.md  SyntaxGates.v  Theorems.v  VerificationChecklist.md  XBar.v  _CoqProject
data/: MASAQ_affix_lexicon.csv  MASAQ_case_marker_map.csv  MASAQ_lookup_warnings.csv  MASAQ_unique_values.csv  MASAQ_unique_values_ar.csv  README_data_bank_apis.md  arabic_wazn_matcher_gate.py  awzan_merged_final.csv  operators_catalog_split_enriched.csv  operators_catalog_split_enriched.jsonl  operators_catalog_split_project.csv  operators_catalog_split_project_enriched.csv  operators_catalog_split_project_with_evidence.csv  operators_catalog_split_project_with_evidence.jsonl  quran-simple-clean-stop-mark.no-basmala.txt  quran-uthmani.txt  remov-direct.py
demo/: README.md  index.html
docs/: ALIGN_CURSOR_WITH_MY_MACHINE.md  ANSWERS_BEFORE_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_SCHEMA.md  CSV_FIELDS_CATEGORY_KIND_TYPE.md  CURRENT_SITUATION.md  DATA_SOURCE_ISSUES.md  DOCUMENTATION_INDEX.md  ENCODER_DECODER_PLAN.md  ENGINE_MANIFEST.md  FRACTAL_SCIENTIFIC_ANALYSIS.md  FRAMEWORK_README.md  GITHUB_ISSUES_STRUCTURE.md  HIERARCHY_COMPLETION_REPORT.md  HIERARCHY_DIAGRAM.md  I3RAB_MAPPING.md  INTEGRATION_ROADMAP.md  KIND_DECISION_SOURCE_ANALYSIS.md  MASTER_PLAN_CHECKLIST.md  MIGRATION_GUIDE.md  MORPHOLOGY_GUIDE.md  NEXT_STEPS.md  NO_CV_ANALYSIS.md  OUT_WITH_SOURCES_ANALYSIS.md  PHASE3_DESIGN_SPEC.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHONOLOGICAL_GATES.md  PHONOLOGY.md  PLAN_MERGE_ANALYSIS.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  RHETORIC_ARCHITECTURE_COMPLIANCE.md  ROADMAP.md  ROOT_EXTRACTION_MISHKAT_RCA_AND_FIX_PLAN.md  SESSION_LOG.md  SPRINT2_COMPLETION_SUMMARY.md  SPRINT2_CURRENT_STATE.md  SPRINT2_PLAN.md  SPRINT3_COMPLETE.md  (+81 more)
examples/: README.md  integration_demo.py  labels_example.txt  quran_data_example.txt  quran_with_labels_example.csv  quran_with_labels_example.json  syntax_theory_examples.py  theory_demonstrations.py
fractalhub/: README.md  __init__.py  cli.py  verified_bridge.py
fractalhub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
i3rab/: clean_to_word_csv.py  download_belquran_i3rab.py  i3rab_download.py  i3rab_download_clean.py  i3rab_download_new.py  quran_i3rab_out.csv  quran_i3rab_pipeline.py  run_all_surah.sh  run_existing_surah.sh
notebooks/: connect.ipynb  quran_transformer.ipynb
scripts/: add_missing_awzan_from_csv.py  analyze_root_sources.py  build_operator_evidence_from_quran_i3rab.py  build_quran_exact_gold.py  clean_awzan_csv.py  download_data_bank_apis.py  enrich_operators_catalog.py  eval_mishkat.py  evaluate_syntax.py  export_discovered_roots_table.py  export_no_cv_no_wazn.py  filter_golden_names_by_quran.py  generate_engine_tests.py  generate_operators_catalog_enriched.sh  jsonl_to_operators_csv.py  list_failed_downloads.py  prepare_quran_dataset.py  profile_orchestrator.py  qa_operators_enriched.py  resolver.py  run_ayat_al_dayn_snapshot.py  run_ayat_full_quran.py  run_complete_pipeline_snapshot.py  run_complete_snapshot.py  run_complete_snapshot_integrated.py  run_full_quran_analysis.py  run_orchestrator_skeleton.py  run_tests.py  train_transformer_quran.py  update_architecture_log.py  validate_dictionary.py  verify_stage1_stage2_docs.py
src/: fractal_balance.py  linguistic_data.py  segmenter.py  test_ayat_aldain.py  word-2-cv.py
tests/: analyze_combined.py  analyze_fath_verse.py  conftest.py  operators_catalog_split.csv  test_arabic_normalization.py  test_batch_28_report_presentation.py  test_c2c_scaffold.py  test_cli_comprehensive.py  test_cli_morphology.py  test_ctegate.py  (+61 more)
(+1106 files in other folders)
